REST documentation via Swagger, Swagger UI 3.x/2.x, TestUpload

--- a/myphotos-rest/src/main/webapp/index.html
+++ b/myphotos-rest/src/main/webapp/index.html
@@ -1,10 +1,15 @@
-<!DOCTYPE html>
 <html>
-    <head>
-        <title>Start Page</title>
-        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    </head>
-    <body>
-        <h1>Hello World!</h1>
-    </body>
+	<head>
+		<title>Swagger IU</title>
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	</head>
+	<body>
+		<div>Available Swagger UI versions:
+			<ul>
+				<li><a href="/swagger-ui-2x/index.html">Swagger UI 2.x</a></li>
+				<li><a href="/swagger-ui-3x/index.html">Swagger UI 3.x</a></li>
+			</ul>
+		</div>
+	</body>
 </html>
